# OpenImpala

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  GNUmakefile  README.md  figure.py  paper.bib  paper.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: benchmark.yml  build-test.yml  docs.yml  pypi-wheels-cpu.yml  pypi-wheels-gpu.yml  pypi-wheels.yml  release-drafter.yml  release.yml
cmake/: FindHYPRE.cmake
containers/: Dockerfile  Singularity.deps.def
data/: SampleData_2Phase_stack_3d_float32le.raw  SampleData_2Phase_stack_3d_int16le.raw  SampleData_2Phase_stack_3d_uint16le.raw
docs/: changelog.md  conf.py  contributing.md  getting-started.md  index.rst  mainpage.md  requirements.txt
docs/api/: cpp.md  python.rst
docs/tutorials/: index.md
docs/user-guide/: concepts.md  gpu.md  hpc.md  input-files.md  solvers.md
notebooks/: profiling_and_tuning.ipynb  visualization_yt.ipynb
python/: CMakeLists.txt  pyproject.toml
python/bindings/: VoxelImage.H  config.cpp  enums.cpp  io.cpp  module.cpp  props.cpp  solvers.cpp
python/openimpala/: __init__.py  _solver.py  cli.py  exceptions.py  facade.py  session.py
python/tests/: conftest.py  test_cli.py  test_config.py  test_enums.py  test_facade_helpers.py  test_mlmg_porespy.py  test_percolation.py  test_tortuosity.py  test_volume_fraction.py
src/: CMakeLists.txt
src/io/: CathodeWrite.H  CathodeWrite.cpp  DatReader.H  DatReader.cpp  HDF5Reader.H  HDF5Reader.cpp  ImageLoader.H  ImageLoader.cpp  RawReader.H  RawReader.cpp  TiffReader.H  TiffReader.cpp
src/props/: BoundaryCondition.H  ConnectedComponents.H  ConnectedComponents.cpp  DeffTensor.H  DeffTensor.cpp  Diffusion.cpp  EffDiffFillMtx.F90  EffDiffFillMtx.H  EffDiffFillMtx_F.H  EffectiveDiffusivityHypre.H  EffectiveDiffusivityHypre.cpp  FloodFill.H  FloodFill.cpp  HypreCheck.H  HypreStructSolver.H  HypreStructSolver.cpp  MacroGeometry.H  ParticleSizeDistribution.H  ParticleSizeDistribution.cpp  PercolationCheck.H  PercolationCheck.cpp  PhysicsConfig.H  REVStudy.H  REVStudy.cpp  ResultsJSON.H  SolverConfig.H  SpecificSurfaceArea.H  SpecificSurfaceArea.cpp  ThroughThicknessProfile.H  ThroughThicknessProfile.cpp  Tortuosity.H  TortuosityDirect.H  TortuosityDirect.cpp  TortuosityHypre.H  TortuosityHypre.cpp  TortuosityHypreFill.F90  TortuosityHypreFill.H  TortuosityHypreFill_F.H  TortuosityKernels.H  TortuosityMLMG.H  (+11 more)
tests/: CMakeLists.txt  tCathodeWrite.cpp  tDatReader.cpp  tEffectiveDiffusivity.cpp  tFloodFill.cpp  tHDF5Reader.cpp  tMultiPhaseTransport.cpp  tPercolationCheck.cpp  tRawReader.cpp  tSyntheticEffectiveDiffusivity.cpp  tSyntheticMicrostructure.cpp  tSyntheticPercolation.cpp  tSyntheticREVStudy.cpp  tSyntheticVolumeFraction.cpp  tTiffReader.cpp  tTortuosity.cpp  tTortuosityDirect.cpp  tTortuosityMLMG.cpp  tVolumeFraction.cpp
tests/benchmarks/: create_raw_variants.py  generate_benchmarks.py
tests/inputs/: tDiffusion_dryrun.inputs  tDiffusion_hdf5.inputs  tDiffusion_microstructure.inputs  tDiffusion_rev.inputs  tDiffusion_tiff.inputs  tDiffusion_tortuosity.inputs  tEffectiveDiffusivity_multiphase.inputs  tMultiPhaseTransport.inputs  tMultiPhaseTransport_bicgstab.inputs  tMultiPhaseTransport_conductivity.inputs  tMultiPhaseTransport_dirY.inputs  tMultiPhaseTransport_dirZ.inputs  tMultiPhaseTransport_dirichlet_external_bc.inputs  tMultiPhaseTransport_pcg.inputs  tMultiPhaseTransport_periodic_sides.inputs  tMultiPhaseTransport_thermal.inputs  tMultiPhaseTransport_twophase.inputs  tPercolationCheck.inputs  tRawReader_float32le.inputs  tRawReader_int16le.inputs  tRawReader_uint16le.inputs  tRegressionBenchmark_parallel.inputs  tRegressionBenchmark_series.inputs  tRegressionBenchmark_series_PCG.inputs  tRegressionBenchmark_uniform.inputs  tRegressionBenchmark_uniform_PCG.inputs  tSyntheticEffectiveDiffusivity.inputs  tSyntheticREVStudy.inputs  tTortuosityDirect.inputs  tTortuosityMLMG_dirY.inputs  tTortuosityMLMG_masked.inputs  tTortuosityMLMG_uniform.inputs  tTortuosity_conductivity.inputs  tTortuosity_multiphase.inputs
tests/unit/: CMakeLists.txt  test_MacroGeometry.cpp  test_PhysicsConfig.cpp  test_ResultsJSON.cpp
tests/validation/: README.md  analytical_bounds_vv.py  berea_sandstone_vv.py  fetch_canonical_data.py  sphere_packing_vv.py
tutorials/: 01_hello_openimpala.ipynb  02_anisotropy_and_bpx.ipynb  02_digital_twin.ipynb  03_multiphase_and_fields.ipynb  03_rev_and_uncertainty.ipynb  04_multiphase_and_fields.ipynb  04_surrogate_modelling.ipynb  05_surrogate_modelling.ipynb  05_topology_optimisation.ipynb  06_topology_optimisation.ipynb  07_hpc_scaling.ipynb
