[build-system]
requires = [
    "scikit-build-core>=0.8",
    "pybind11>=2.11,<3",
    "setuptools_scm>=8",
]
build-backend = "scikit_build_core.build"

[project]
name = "openimpala"
dynamic = ["version"]
description = "Python bindings for OpenImpala — transport-property computation on 3-D voxel images"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
mpi = ["mpi4py"]
amrex = ["pyamrex"]
progress = ["tqdm"]
jupyter = ["matplotlib", "ipywidgets"]
test = [
    "pytest>=7",
    "numpy",
]
all = [
    "mpi4py",
    "pyamrex",
    "tqdm",
    "matplotlib",
    "ipywidgets",
    "pytest>=7",
]

[project.scripts]
openimpala = "openimpala.cli:main"

[tool.scikit-build]
cmake.args = ["-DOPENIMPALA_PYTHON=ON", "-DBUILD_TESTING=OFF"]
build.targets = ["_core"]
install.components = ["python"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
