[build-system]
requires = [
    "scikit-build-core>=0.8",
    "pybind11>=2.11,<3",
    "setuptools_scm>=8",
]
build-backend = "scikit_build_core.build"

[project]
name = "openimpala"
dynamic = ["version"]
description = "Python bindings for OpenImpala — transport-property computation on 3-D voxel images"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy>=1.7",
    # GPU-only deps: kept commented out so the CPU wheel stays lean.
    # The openimpala-cuda build in .github/workflows/pypi-wheels-gpu.yml
    # uncomments these via sed before scikit-build-core reads this file.
    # Do not remove the "# cuda-" markers — the sed rule keys off them.
    # cuda-deps-start
    #"nvidia-cuda-runtime-cu12",
    #"nvidia-cublas-cu12",
    #"nvidia-cusparse-cu12",
    #"nvidia-curand-cu12",
    #"nvidia-nvjitlink-cu12",
    # cuda-deps-end
]

[project.optional-dependencies]
mpi = ["mpi4py"]
progress = ["tqdm"]
jupyter = ["matplotlib", "ipywidgets"]
viz = ["yt", "matplotlib"]
test = [
    "pytest>=7",
    "numpy",
    "scipy>=1.7",
]
docs = [
    "sphinx>=7.0",
    "furo",
    "breathe",
    "myst-parser",
    "sphinx-autodoc-typehints",
]
all = [
    "mpi4py",
    "tqdm",
    "matplotlib",
    "ipywidgets",
    "yt",
    "pytest>=7",
]

[project.scripts]
openimpala = "openimpala.cli:main"

[tool.scikit-build]
cmake.args = ["-DOPENIMPALA_PYTHON=ON", "-DBUILD_TESTING=OFF"]
build.targets = ["_core"]
install.components = ["python"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
# Produce PyPI-compatible versions even on non-tagged commits.
# Without this, setuptools_scm appends "+gXXXX" local identifiers
# that PyPI rejects with HTTP 400.
local_scheme = "no-local-version"
fallback_version = "4.0.2"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
